# ansible-role-kodi

./: pyproject.toml
defaults/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
tasks/: main.yml
